# mapcir-cron

./: .gitignore  CMakeLists.txt  Dockerfile.ubuntu.dev  LICENSE  README.md  configs.json
src/: main.cc
src/helpers/: cron.cc  cron.h  flags.cc  flags.h  utils.cc  utils.h
ubuntu/: mapcir-cron  mapcir-cron.service  mapcir-cron.sh
